# CMakeList.txt : CMake project for happy_new_year, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("happy_new_year")

# Add source to this project's executable.
add_executable (happy_new_year "happy_new_year.cpp" "happy_new_year.h")

# TODO: Add tests and install targets if needed.
